--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Profile page where user can edit their details.",
   "main": "/server/index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,11 @@
     "mongodb": "^3.1.13"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.14.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-react": "^7.12.4",
     "mocha": "^6.0.1",
     "supertest": "^3.4.2",
     "tape": "^4.10.1"
