--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,15 @@ trim_trailing_whitespace = true
 
 [Makefile]
 indent_style = tab
+indent_size = 2
+tab_width = 2
 
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
+
+[bash]
+indent_style = space
+indent_size = 2
+tab_width = 2
+trim_trailing_whitespace = true
