wip wip, building server, added mongodb, building endpoints for cities and users

--- a/api/package.json
+++ b/api/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "spark-api",
+  "name": "api",
   "version": "0.0.1",
-  "description": "simple api",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "mocha ./tests --recursive",
-    "start": "nodemon server"
+    "start": "node ./bin/www"
   },
-  "author": "Mannuel Ferreira",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "mongoose": "^5.4.15",
-    "nodemon": "^1.18.10"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.0.2"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
+    "consola": "^2.5.6",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.16",
+    "morgan": "~1.9.0",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1"
   }
 }
