--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:11.10.0-alpine
 
+RUN mkdir -p /client
 WORKDIR /client
 
 COPY package*.json /client/
-
+RUN npm cache clean
+RUN npm install
 COPY . /client/
 
-EXPOSE 3000
+EXPOSE 3080
 
-CMD ["node", "react-scripts start"]
+CMD ["npm", "start"]
