fix docker mount paths

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:11.10.0-alpine
 
-RUN mkdir -p /api/
-WORKDIR /api
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
-COPY package*.json /api/
+COPY ./api/package*.json /usr/src/app
 RUN npm cache clean
 RUN npm install
-COPY . /api/
+COPY ./api/* /user/src/app
 
 EXPOSE 9080
 
