building query to fetch and render cities

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:11.10.0-alpine
 
-RUN mkdir -p /client
-WORKDIR /client
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
-COPY package*.json /client/
+COPY /client/package.json /usr/src/app
 RUN npm cache clean
 RUN npm install
-COPY . /client/
+COPY /client /user/src/app
 
 EXPOSE 3080
 
