--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,10 +3,10 @@ FROM node:11.10.0-alpine
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-COPY ./api/package*.json /usr/src/app
+COPY /api/package.json /usr/src/app
 RUN npm cache clean
 RUN npm install
-COPY ./api/* /user/src/app
+COPY /api /user/src/app
 
 EXPOSE 9080
 
