--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "spark-client",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-calendar": "^2.18.1",
     "react-date-picker": "^7.2.0",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
@@ -16,7 +17,7 @@
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
