--- a/api/package.json
+++ b/api/package.json
@@ -4,23 +4,28 @@
   "private": true,
   "scripts": {
     "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha 'tests/*.js' -w"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cloudinary": "^1.13.2",
+    "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "consola": "^2.5.6",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "jest": "^24.1.0",
+    "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.16",
     "morgan": "~1.9.0",
-    "multer": "^1.4.1",
-    "multer-storage-cloudinary": "^2.2.1"
+    "multer": "^1.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "moxios": "^0.4.0",
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
   }
 }
